<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.17</version>
	</parent>

	<groupId>no.nav.dokarkiv</groupId>
	<artifactId>dokarkiv</artifactId>
	<version>1-SNAPSHOT</version>

	<packaging>pom</packaging>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>dokumentproduksjoninfo</module>
		<module>arkiverdokumentproduksjon</module>
		<module>hentjournalsakinfo</module>
		<module>arkivervariant</module>
		<module>admin</module>
		<module>journalpost</module>
		<module>safintern</module>
	</modules>

	<properties>
		<java.version>17</java.version>

		<cxf.version>3.6.2</cxf.version>
		<sfm-springjdbc.version>9.0.2</sfm-springjdbc.version>
		<commons-collections4.version>4.4</commons-collections4.version>
		<logstash-logback-encoder.version>7.3</logstash-logback-encoder.version>
		<java-jwt.version>4.4.0</java-jwt.version>
		<jaxb2-basics-runtime.version>0.13.1</jaxb2-basics-runtime.version>
		<google-cloud-storage.version>2.44.1</google-cloud-storage.version>
		<tink.version>1.15.0</tink.version>
		<tink-gcpkms.version>1.10.0</tink-gcpkms.version>
		<blaze-persistence.version>1.6.10</blaze-persistence.version>
		<commons-io.version>2.17.0</commons-io.version>
		<springdoc-openapi-ui.version>1.8.0</springdoc-openapi-ui.version>
		<microsoft-graph.version>6.19.0</microsoft-graph.version>
		<azure-identity.version>1.14.0</azure-identity.version>

		<!-- NAV -->
		<token-support.version>2.1.9</token-support.version>
		<verapdf.version>1.26.1</verapdf.version>

		<!-- Tjenestegrensesnitt -->
		<arkiverdokumentproduksjon-tjenestespesifikasjon.version>2-b9013e7
		</arkiverdokumentproduksjon-tjenestespesifikasjon.version>
		<dokumentproduksjoninfo-tjenestespesifikasjon.version>3-9eba8ba</dokumentproduksjoninfo-tjenestespesifikasjon.version>

		<!-- test -->
		<datasource-proxy-spring-boot-starter.version>1.9.0</datasource-proxy-spring-boot-starter.version>
		<!-- h2 2.x+ er ikke kompatibel med noen av custom spørringene -->
		<h2.version>1.4.200</h2.version>
		<wiremock-jre8-standalone.version>2.35.1</wiremock-jre8-standalone.version>

		<!-- Plugins -->
		<maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>app</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>dokumentproduksjoninfo</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>arkiverdokumentproduksjon</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>hentjournalsakinfo</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>arkivervariant</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>admin</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>journalpost</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>safintern</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- Tjenestegrensesnitt -->
			<dependency>
				<groupId>no.nav.tjenester.brevogarkiv</groupId>
				<artifactId>arkiverdokumentproduksjon-tjenestespesifikasjon</artifactId>
				<version>${arkiverdokumentproduksjon-tjenestespesifikasjon.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.tjenester.brevogarkiv</groupId>
				<artifactId>dokumentproduksjoninfo-tjenestespesifikasjon</artifactId>
				<version>${dokumentproduksjoninfo-tjenestespesifikasjon.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring</artifactId>
				<version>${token-support.version}</version>
			</dependency>
			<dependency>
				<groupId>org.verapdf</groupId>
				<artifactId>validation-model</artifactId>
				<version>${verapdf.version}</version>
				<exclusions>
					<exclusion>
						<groupId>javax.activation</groupId>
						<artifactId>javax.activation-api</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>org.simpleflatmapper</groupId>
				<artifactId>sfm-springjdbc</artifactId>
				<version>${sfm-springjdbc.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-bom</artifactId>
				<version>${cxf.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.blazebit</groupId>
				<artifactId>blaze-persistence-bom</artifactId>
				<version>${blaze-persistence.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>${commons-collections4.version}</version>
			</dependency>
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jvnet.jaxb2_commons</groupId>
				<artifactId>jaxb2-basics-runtime</artifactId>
				<version>${jaxb2-basics-runtime.version}</version>
			</dependency>
			<dependency>
				<groupId>com.auth0</groupId>
				<artifactId>java-jwt</artifactId>
				<version>${java-jwt.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.cloud</groupId>
				<artifactId>google-cloud-storage</artifactId>
				<version>${google-cloud-storage.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.crypto.tink</groupId>
				<artifactId>tink</artifactId>
				<version>${tink.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.crypto.tink</groupId>
				<artifactId>tink-gcpkms</artifactId>
				<version>${tink-gcpkms.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-ui</artifactId>
				<version>${springdoc-openapi-ui.version}</version>
			</dependency>
			<dependency>
				<groupId>com.microsoft.graph</groupId>
				<artifactId>microsoft-graph</artifactId>
				<version>${microsoft-graph.version}</version>
			</dependency>
			<dependency>
				<groupId>com.azure</groupId>
				<artifactId>azure-identity</artifactId>
				<version>${azure-identity.version}</version>
			</dependency>

			<!-- Test -->
			<dependency>
				<groupId>no.nav.dokarkiv</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
				<type>test-jar</type>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring-test</artifactId>
				<version>${token-support.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.github.gavlyukovskiy</groupId>
				<artifactId>datasource-proxy-spring-boot-starter</artifactId>
				<version>${datasource-proxy-spring-boot-starter.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.github.tomakehurst</groupId>
				<artifactId>wiremock-jre8-standalone</artifactId>
				<version>${wiremock-jre8-standalone.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>no.nav.security</groupId>
			<artifactId>token-validation-spring-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
			<resource>
				<directory>src/main/resources/data</directory>
				<filtering>false</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<nonFilteredFileExtensions>
						<nonFilteredFileExtension>pdf</nonFilteredFileExtension>
					</nonFilteredFileExtensions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>